@@ -1,1 +1,1 @@
-agar.gui.widget.fixed agar-gui-widget-fixed.ads
+agar.gui.widget.fixed agar-gui-widget-fixed.ads agar-gui-widget-fixed.adb
